# p10_monthly-wine-data-pipeline

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
_flows/: git_push.yml  monthly-wine-data-pipeline.yml
scripts/: export_sales_to_excel.py  xlsx_to_csv.py
